# tranzistorak

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile  docker-compose.yaml  license  package-lock.json  package.json  shell.nix  toolchain.toml
.cargo/: config.toml
.forgejo/default_merge_message/: MERGE_TEMPLATE.md
.forgejo/workflows/: actionlint-check.yaml  checkov-check.yaml  conventional-commit-messages-check.yaml  conventional-pull-request-title-check.yaml  docker-build-check.yaml  dotenv-linter-check.yaml  gitleaks-check.yaml  hadolint-check.yaml  markdownlint-check.yaml  prettier-check.yaml  rust-check.yaml  shellcheck-check.yaml  yamllint-check.yaml
.github/config/: markdownlint.yaml  yamllint.yaml
.github/dependencies/checkov-check/: requirements.txt
.github/workflows/: actionlint-check.yaml  checkov-check.yaml  conventional-commit-messages-check.yaml  conventional-pull-request-title-check.yaml  dotenv-linter-check.yaml  gitleaks-check.yaml  hadolint-check.yaml  markdownlint-check.yaml  prettier-check.yaml  rust-check.yaml  shellcheck-check.yaml  yamllint-check.yaml
icons/: bot.ai
src/: lib.rs  main.rs
src/activity/: mod.rs
src/bot/: mod.rs
src/command/: execution.rs  mod.rs  registration.rs  voice.rs
src/commands/: mod.rs
src/embed/: mod.rs
src/embeds/: mod.rs
src/env/: mod.rs  voice.rs
src/log/: mod.rs
src/model/: mod.rs
src/player/: mod.rs
src/query/: mod.rs
src/query/spotify/: mod.rs  playlist.rs  track.rs
src/query/youtube/: mod.rs  playlist.rs  search.rs
src/utils/: mod.rs
src/youtube/: mod.rs
