[package]
name = "tranzistorak"
version = "3.3.0"
edition = "2024"

[dependencies]
amplify_derive = "4.0.1"
anyhow = "1.0.98"
ftail = { version = "0.2.1", features = ["timezone"] }
iana-time-zone = "0.1.63"
load-dotenv = "0.1.2"
log = "0.4.27"
rand = "0.9.1"
reqwest = "0.12.15"
rspotify = { version = "0.14.0" }
rustypipe = "0.11.4"
serenity = "0.12.4"
songbird = "0.5.0"
symphonia = { version = "0.5.4", features = ["all"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
unwrap_or_log = "0.2.0"
